feat: :wrench: :bug: :book: add entry point for broswer import to avoid nodejs dependancies, bump up versions

--- a/litemcpjs/package.json
+++ b/litemcpjs/package.json
@@ -1,9 +1,12 @@
 {
   "name": "litemcpjs",
-  "version": "0.1.2",
+  "version": "0.1.6",
   "type": "module",
   "main": "./dist/litemcp.cjs",
   "module": "./dist/litemcp.mjs",
+  "browser": {
+    "./dist/litemcp.mjs": "./dist/litemcp_broswer.mjs"
+  },
   "exports": {
     ".": {
       "import": "./dist/litemcp.mjs",
@@ -32,7 +35,7 @@
   "license": "MIT",
   "description": "Lite mcp for javascript is the **BEST** yet way to start a REMOTE **SSE** javascript MCP server and Client.",
   "dependencies": {
-    "lite-mcp-sdk": "^0.1.2"
+    "lite-mcp-sdk": "^0.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
